edited home-page and attraktionen-page

--- a/Attraktionen.html
+++ b/Attraktionen.html
@@ -5,29 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./mvp.css">
-    <link rel="stylesheet" href="./attraktionen-stylesheet.css">
+    <link rel="stylesheet" href="./attraktionen.css">
     <title>Attraktionen</title>
 </head>
 <body>
 
+    <main>
 <!--Hecht attraktion-->
-<div class="hecht"></div>
-
-
-
-<!--Füttern attraktion-->
-<div class="füttern"></div>
+<div class="card">
+    <img src="./img/füttern-attraktionen.png" alt="Bildbeschreibung">
+    <div class="card-text">
+      <p>Textinhalt</p>
+    </div>
+  </div>
+  
 
 
 
 <!--Film attraktion-->
-<div class="film"></div>
+<div class="card">
+    <img src="./img/grill-attraktion.png" alt="Bildbeschreibung" width="350px" height="200.01px">
+    <div class="card-text">
+      <p>Textinhal</p>
+    </div>
+  </div>
 
 
 
 <!--Grill attraktion-->
-<div class="grill"></div>
+<div class="card">
+    <img src="./img/film-attraktionen.png" alt="Bildbeschreibung" width="350px" height="auto">
+    <div class="card-text">
+      <p>Textinhal</p>
+    </div>
+  </div>
 
+</main>
 
     
 </body>
