finish fischarten and home

--- a/Fischarten.html
+++ b/Fischarten.html
@@ -17,6 +17,22 @@
 
 <body>
  
+  <header>
+    <nav class="navbar">
+        <div class="logo">
+            <p>SwissFish.zoo</p>
+        </div>
+       
+        <ul class="nav-links">
+          <li><a href="file:///Users/taavabr1/Desktop/kubernete-managing/Home/home.html">Home</a></li>
+          <li><a href="file:///Users/taavabr1/Desktop/kubernete-managing/Aboutme/aboutme.html">Fischarten</a></li>
+          <li><a href="file:///Users/taavabr1/Desktop/kubernete-managing/Socialmedia/Socialmedia/socialmedia.html">Tickets</a></li>
+          <li><a href="file:///Users/taavabr1/Desktop/kubernete-managing/Product/product.html">Attraktionen</a></li>
+        </ul>
+      
+      </nav>
+    </header>
+
 
 <main>
 
@@ -54,12 +70,11 @@
     <div class="fish-link"> <div><img src="./img/forellenbarsch.png" alt="Your image description"></div><p>Forellenbarsch</p><br><div class="mehrdazu"><a href="#">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
   </div>
 </div>
-
-
-
-
-
 </main>
+
+<footer>
+  <div class="left-part"><h2>SwissFisch.zoo</h2><p>Kontakte:<br>Tel: 079 363 70 06<br>Mail: bruno.varrese@lernende.bbw.ch</p></div><div class="middle-part"><p>|<p><a href="#">Impressum</a><p>|</p></div><div class="last-part"><h7>Lust auf eine unvergessliches Abenteuer?<br>Dann kommt uns doch besuchen!<br>Eurer SwissFish.zoo Team</h7></div>
+</footer>
 </body>
 </html>
 
