--- a/Home.html
+++ b/Home.html
@@ -14,7 +14,7 @@
   <header>
     <nav class="navbar">
         <div class="logo">
-            <a >SwissFish.zoo</a>
+            <p>SwissFish.zoo</p>
         </div>
        
         <ul class="nav-links">
@@ -119,7 +119,7 @@
         </main>
 
           <footer>
-            <p>Kontakte<br>Tel: 079 363 70 06<br>Mail: bruno.varrese@lernende.bbw.ch</p><p>|<a href="#">Impressum</a>
+            <div class="left-part"><h2>SwissFisch.zoo</h2><p>Kontakte:<br>Tel: 079 363 70 06<br>Mail: bruno.varrese@lernende.bbw.ch</p></div><div class="middle-part"><p>|<p><a href="#">Impressum</a><p>|</p></div><div class="last-part"><h7>Lust auf eine unvergessliches Abenteuer?<br>Dann kommt uns doch besuchen!<br>Eurer SwissFish.zoo Team</h7></div>
           </footer>
 
 
