Edited all pages

--- a/Fischarten.html
+++ b/Fischarten.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./mvp.css">
     <link rel="stylesheet" href="./fischarten-stylesheet.css">
-  <title>Document</title>
+  <title>Fischarten</title>
 </head>
 
 <style>
@@ -24,10 +24,10 @@
         </div>
        
         <ul class="nav-links">
-          <li><a href="file:///Users/taavabr1/Desktop/kubernete-managing/Home/home.html">Home</a></li>
-          <li><a href="file:///Users/taavabr1/Desktop/kubernete-managing/Aboutme/aboutme.html">Fischarten</a></li>
-          <li><a href="file:///Users/taavabr1/Desktop/kubernete-managing/Socialmedia/Socialmedia/socialmedia.html">Tickets</a></li>
-          <li><a href="file:///Users/taavabr1/Desktop/kubernete-managing/Product/product.html">Attraktionen</a></li>
+          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Home.html">Home</a></li>
+          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
+          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
+          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
         </ul>
       
       </nav>
