did footer and header of all pages responsive

--- a/Attraktionen.html
+++ b/Attraktionen.html
@@ -14,18 +14,18 @@
 
   <header>
     <nav class="navbar">
-        <div class="logo">
-            <p>SwissFish.zoo</p>
-        </div>
-       
-        <ul class="nav-links">
-          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Home.html">Home</a></li>
-          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
-          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
-          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
-        </ul>
-      
-      </nav>
+      <div class="logo">
+        <p>SwissFish.zoo</p>
+      </div>
+
+      <ul class="nav-links">
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Home.html">Home</a></li>
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
+      </ul>
+
+    </nav>
     </header>
 
   <main>
@@ -69,7 +69,17 @@
     </div>
 
   </main>
-
+  <footer>
+    <div class="footer-logo">
+      <h2>SwissFisch.zoo</h2>
+      <img src="./img/logo.png" alt="SwissFish.zoo Logo" width="25px" height="auto">
+    </div>
+    <div class="footer-impdat">
+      <p><a href="#">Impressum</a></p>
+      <p>|</p>
+      <p><a href="#">Datenschutz</a></p>
+    </div>
+  </footer>
 
 </body>
 
