--- a/Fischarten.html
+++ b/Fischarten.html
@@ -19,18 +19,18 @@
  
   <header>
     <nav class="navbar">
-        <div class="logo">
-            <p>SwissFish.zoo</p>
-        </div>
-       
-        <ul class="nav-links">
-          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Home.html">Home</a></li>
-          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
-          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
-          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
-        </ul>
-      
-      </nav>
+      <div class="logo">
+        <p>SwissFish.zoo</p>
+      </div>
+
+      <ul class="nav-links">
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Home.html">Home</a></li>
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
+      </ul>
+
+    </nav>
     </header>
 
 
@@ -73,7 +73,16 @@
 </main>
 
 <footer>
-  <div class="left-part"><h2>SwissFisch.zoo</h2><p>Kontakte:<br>Tel: 079 363 70 06<br>Mail: bruno.varrese@lernende.bbw.ch</p></div><div class="middle-part"><p>|<p><a href="#">Impressum</a><p>|</p></div><div class="last-part"><h7>Lust auf eine unvergessliches Abenteuer?<br>Dann kommt uns doch besuchen!<br>Eurer SwissFish.zoo Team</h7></div>
+  <div class="footer-logo">
+    <h2>SwissFisch.zoo</h2>
+    <img src="./img/logo.png" alt="SwissFish.zoo Logo" width="25px" height="auto">
+  </div>
+  <div class="footer-impdat">
+    <p><a href="#">Impressum</a></p>
+    <p>|</p>
+    <p><a href="#">Datenschutz</a></p>
+  </div>
+
 </footer>
 </body>
 </html>
