--- a/Home.html
+++ b/Home.html
@@ -135,9 +135,11 @@
       </aside>
 
       <hr>
-      <h2 class="fakten">Fakten über SwissFish.zoo</h2>
+      <section class="unsereFakten">
+      <h2>Fakten über uns!</h2>
       <!--Circles-->
       <div class="circles">
+        
         <div class="circle">
           <p>Rund<br>4<br>Fischarten</p>
         </div>
@@ -149,25 +151,23 @@
         <div class="circle">
           <p>Über<br>100'000 Besucher<br>im Jahr</p>
         </div>
-
       </div>
-    </div>
+      </section>
+
 
   </main>
 
   <footer>
-    <div class="left-part">
+    <div class="footer-logo">
       <h2>SwissFisch.zoo</h2>
-      <p>Kontakte:<br>Tel: 079 363 70 06<br>Mail: bruno.varrese@lernende.bbw.ch</p>
+      <img src="./img/logo.png" alt="SwissFish.zoo Logo" width="25px" height="auto">
     </div>
-    <div class="middle-part">
-      <p>|
-      <p><a href="#">Impressum</a>
+    <div class="footer-impdat">
+      <p><a href="#">Impressum</a></p>
       <p>|</p>
+      <p><a href="#">Datenschutz</a></p>
     </div>
-    <div class="last-part">
-      <h7>Lust auf ein unvergessliches Abenteuer?<br>Dann kommt uns doch besuchen!<br>Eurer SwissFish.zoo Team</h7>
-    </div>
+  
   </footer>
 
 
