--- a/test.html
+++ b/test.html
@@ -1,116 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="test.css" />
-  <link rel="shortcut icon" type="x-icon" href="./img/favicon2.png">
-  <title>Lebenslauf</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SwissFisch.zoo Navbar</title>
+    <link rel="stylesheet" href="mvp.css">
+    <link rel="stylesheet" href="test.css">
+    
 </head>
-
 <body>
-
-
-  <main id="main">
-    <div class="imageWithTextRight">
-      <table>
-        <tr>
-          <th>Tag</th>
-          <th>Öffnungszeit</th>
-        </tr>
-        <tr>
-          <td>Montag</td>
-          <td>9:00 - 18:00 Uhr</td>
-        </tr>
-        <tr>
-          <td>Dienstag</td>
-          <td>9:00 - 18:00 Uhr</td>
-        </tr>
-        <tr>
-          <td>Mittwoch</td>
-          <td>9:00 - 18:00 Uhr</td>
-        </tr>
-        <tr>
-          <td>Donnerstag</td>
-          <td>9:00 - 18:00 Uhr</td>
-        </tr>
-        <tr>
-          <td>Freitag</td>
-          <td>9:00 - 18:00 Uhr</td>
-        </tr>
-        <tr>
-          <td>Samstag</td>
-          <td>10:00 - 15:00 Uhr</td>
-        </tr>
-        <tr>
-          <td>Sonntag</td>
-          <td>Geschlossen</td>
-        </tr>
-      </table>
-    </div>
-
-
-
-
-
-
-    <table>
-      <thead>
-        <tr>
-          <th>Bedigungen</th>
-          <th>Preis</th>
-        </tr>
-      </thead>
-      <tr>
-        <td>Erwachsene (16+ Jahre)</td>
-        <td>25 Fr.</td>
-      </tr>
-      <tr>
-        <td>Kinder (5-12 Jahre)</td>
-        <td>15 Fr.</td>
-      </tr>
-      <tr>
-        <td>Kleinkinder (0-4 Jahre)</td>
-        <td>Gratis</td>
-      </tr>
-      <tr>
-        <td>Senioren (65+ Jahre)</td>
-        <td>20 Fr.</td>
-      </tr>
-      <tr>
-        <td>Tierfüterungserlebnis</td>
-        <td>+ 10 Fr.</td>
-      </tr>
-      <tr>
-        <td>Eintritt für begleiter von Behinderten</td>
-        <td>Gratis</td>
-      </tr>
-    </table>
-
-
-
-
-
-
-
-
-
-  </main>
-
-
-
-
-
+  <header>
+    <nav>
+      <a href="#" class="logo">SwissFish.zoo</a>
+      <ul class="nav-links">
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Home.html">Home</a></li>
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
+      </ul>
+    
+    </nav>
+  </header>
 </body>
-
-</html>
-
-
-</body>
-
 </html>
