Created for each fisch a page with infos

--- a/Aal.html
+++ b/Aal.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./mvp.css">
     <link rel="stylesheet" href="./fisch.css">
-    <title>Fisch</title>
+    <title>Aal</title>
 </head>
 <body>
     <header>
@@ -71,7 +71,7 @@
 <aside class="über-fisch-container">
 <!--Über Fisch-->
 <div class="card">
-    <img src="./img/füttern-attraktionen.png" alt="Bildbeschreibung">
+    <img src="./img/aal.jpg" alt="Bildbeschreibung">
     <div class="card-text">
       <p>Textinhaltgggggggggggggggggggggggggggggggggggggggggggggg</p>
     </div>
