--- a/Fischarten.html
+++ b/Fischarten.html
@@ -38,11 +38,11 @@
 
 <div class="teil-links">
     <div class="fish-oben">
-    <div class="fish-link"><div><img src="./img/aal.png" alt="Your image description"></div><p>Aal</p><br><div class="mehrdazu"><a href="#">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
+    <div class="fish-link"><div><img src="./img/aal.png" alt="Your image description"></div><p>Aal</p><br><div class="mehrdazu"><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Aal.html">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
    </div>
 
     <div class="fish-unten">
-    <div class="fish-link"> <div><img src="./img/egli.png" alt="Your image description"></div><p>Egli</p><br><div class="mehrdazu"><a href="#">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
+    <div class="fish-link"> <div><img src="./img/egli.png" alt="Your image description"></div><p>Egli</p><br><div class="mehrdazu"><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Egli.html">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
   </div>
 
   </div>
@@ -52,22 +52,22 @@
 
 <div class="teil-mitte">
   <div class="fish-oben">
-    <div class="fish-link"> <div><img src="./img/catfish.png" alt="Your image description"></div><p>Wels</p><br><div class="mehrdazu"><a href="www.google.com">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
+    <div class="fish-link"> <div><img src="./img/catfish.png" alt="Your image description"></div><p>Wels</p><br><div class="mehrdazu"><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Wels.html">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
    </div>
 
     <div class="fish-unten">
-    <div class="fish-link"> <div><img src="./img/hecht.png" alt="Your image description"></div><p>Hecht</p><br><div class="mehrdazu"><a href="#">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
+    <div class="fish-link"> <div><img src="./img/hecht.png" alt="Your image description"></div><p>Hecht</p><br><div class="mehrdazu"><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Hecht.html">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
   </div>
 </div>
 
 
 <div class="teil-rechts">
   <div class="fish-oben">
-    <div class="fish-link"> <div><img src="./img/trout.png" alt="Your image description"></div><p>Forelle</p><br><div class="mehrdazu"><a href="#">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
+    <div class="fish-link"> <div><img src="./img/trout.png" alt="Your image description"></div><p>Forelle</p><br><div class="mehrdazu"><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Forelle.html">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
    </div>
 
     <div class="fish-unten">
-    <div class="fish-link"> <div><img src="./img/forellenbarsch.png" alt="Your image description"></div><p>Forellenbarsch</p><br><div class="mehrdazu"><a href="#">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
+    <div class="fish-link"> <div><img src="./img/forellenbarsch.png" alt="Your image description"></div><p>Forellenbarsch</p><br><div class="mehrdazu"><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Forellenbarsch.html">Mehr dazu</a><img src="./img/arrow-right.png" width="19px" height="auto"></div></div>
   </div>
 </div>
 </main>
