Insert info for Hecht

--- a/Hecht.html
+++ b/Hecht.html
@@ -38,9 +38,9 @@
     <img src="./img/titel-img.png" width="230px" height="auto">
 </div>
 
-    <h4>-Aquatische Umgebung: erttttttttttttttttttt</h4>
-    <h4>-Klima und Temperatur:</h4>
-    <h4>-Tiefenverbreitung:</h4>
+    <h4>-Aquatische Umgebung: Klares Wasser</h4>
+    <h4>-Klima und Temperatur: 5° bis 10°</h4>
+    <h4>-Strömung: Niedrig</h4>
 </div>
 
 
@@ -50,10 +50,10 @@
     <h2>Artenvielfalt und Ökologie</h2>
     <img src="./img/titel-img.png" width="250px" height="auto">
 </div>
-    <h4>-Grösse:</h4>
-    <h4>-Gewicht:</h4>
-    <h4>-Ernährung:</h4>
-    <h4>-Gefährdung:</h4>
+    <h4>-Grösse: Bis 150cm</h4>
+    <h4>-Gewicht: Bis 15Kg</h4>
+    <h4>-Ernährung: Kleine Fische, Tauchvögel</h4>
+    <h4>-Gefährdung: Nicht gefährdet</h4>
 </div>
 
 <!--Anatomie section-->
@@ -62,8 +62,8 @@
       <h2>Anatomie</h2>
       <img src="./img/titel-img.png" width="230px" height="auto">
   </div>
-      <h4>-Körperbau:</h4>
-      <h4>-Laichzeit:</h4>
+      <h4>-Körperbau: Pfeilförmig</h4>
+      <h4>-Laichzeit: März - Mai</h4>
   </div>
 
 </aside>
