--- a/Wels.html
+++ b/Wels.html
@@ -1,85 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./mvp.css">
-    <link rel="stylesheet" href="./fisch.css">
-    <title>Wels</title>
-</head>
-<body>
-    <header>
-      <nav class="navbar">
-        <div class="logo">
-          <p>SwissFish.zoo</p>
-        </div>
-  
-        <ul class="nav-links">
-          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Home.html">Home</a></li>
-          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
-          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
-          <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
-        </ul>
-  
-      </nav>
-        </header>
-<main>
 
-  <aside class="fishprogress-img">
-    <img src="./img/fisch-img.png" alt="Bild mit progress-Pünkte" width="auto" height="670px">
-  </aside>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./mvp.css">
+  <link rel="stylesheet" href="./fisch.css">
+  <title>Wels</title>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar">
+      <div class="logo">
+        <p>SwissFish.zoo</p>
+      </div>
+
+      <ul class="nav-links">
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Home.html">Home</a></li>
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
+        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
+      </ul>
+
+    </nav>
+  </header>
+  <main>
+
+    <aside class="fishprogress-img">
+      <img src="./img/fisch-img.png" alt="Bild mit progress-Pünkte" width="auto" height="670px">
+    </aside>
 
     <aside class="fischinfo-container">
-    <!--Lebensraum section-->
- <div class="thema-container">   
-<div class="info-thema">
-    <h2>Lebensraum</h2>
-    <img src="./img/titel-img.png" width="230px" height="auto">
-</div>
+      <!--Lebensraum section-->
+      <div class="thema-container">
+        <div class="info-thema">
+          <h2>Lebensraum</h2>
+          <img src="./img/titel-img.png" width="230px" height="auto">
+        </div>
 
-    <h4>-Aquatische Umgebung: erttttttttttttttttttt</h4>
-    <h4>-Klima und Temperatur:</h4>
-    <h4>-Tiefenverbreitung:</h4>
-</div>
+        <h4>-Aquatische Umgebung: Mitteltrüb bis sehr trüb</h4>
+        <h4>-Klima und Temperatur: 18° bis 22°</h4>
+        <h4>-Strömung: Niedrig</h4>
+      </div>
 
 
-<!--Artenvielfalt und Ökologie section--> 
-<div class="thema-container">
-<div class="info-thema">
-    <h2>Artenvielfalt und Ökologie</h2>
-    <img src="./img/titel-img.png" width="250px" height="auto">
-</div>
-    <h4>-Grösse:</h4>
-    <h4>-Gewicht:</h4>
-    <h4>-Ernährung:</h4>
-    <h4>-Gefährdung:</h4>
-</div>
+      <!--Artenvielfalt und Ökologie section-->
+      <div class="thema-container">
+        <div class="info-thema">
+          <h2>Artenvielfalt und Ökologie</h2>
+          <img src="./img/titel-img.png" width="250px" height="auto">
+        </div>
+        <h4>-Grösse: Bis 200cm</h4>
+        <h4>-Gewicht: Bis 130Kg</h4>
+        <h4>-Ernährung: Fische, Insekte, Krebse, Vögel</h4>
+        <h4>-Gefährdung: Nicht gefährdet</h4>
+      </div>
 
-<!--Anatomie section-->
-<div class="thema-container">
-  <div class="info-thema">
-      <h2>Anatomie</h2>
-      <img src="./img/titel-img.png" width="230px" height="auto">
-  </div>
-      <h4>-Körperbau:</h4>
-      <h4>-Laichzeit:</h4>
-  </div>
+      <!--Anatomie section-->
+      <div class="thema-container">
+        <div class="info-thema">
+          <h2>Anatomie</h2>
+          <img src="./img/titel-img.png" width="230px" height="auto">
+        </div>
+        <h4>-Körperbau: Langgestreckter Körper</h4>
+        <h4>-Laichzeit: April - Juli</h4>
+      </div>
 
-</aside>
+    </aside>
 
-<aside class="über-fisch-container">
-<!--Über Fisch-->
-<div class="card">
-    <img src="./img/wels.jpg" alt="Bildbeschreibung">
-    <div class="card-text">
-      <p>Textinhaltgggggggggggggggggggggggggggggggggggggggggggggg</p>
-    </div>
-  </div>
-</aside>
-</main>
+    <aside class="über-fisch-container">
+      <!--Über Fisch-->
+      <div class="card">
+        <img src="./img/wels.jpg" alt="Bildbeschreibung">
+        <div class="card-text">
+          <p>Der Wels ist ein großer Süßwasserfisch und gehört zur Familie der Welse. Er hat einen langen,
+            stromlinienförmigen Körper und ist dunkelgrün bis schwarz gefärbt. Welse sind Raubfische und ernähren sich
+            vor allem von Fischen, aber auch von Fröschen und Wasservögeln. Sie kommen in vielen Gewässern Europas und
+            Asiens vor.</p>
+        </div>
+      </div>
+    </aside>
+  </main>
 
-<footer>
+  <footer>
     <div class="footer-logo">
       <h2>SwissFisch.zoo</h2>
       <img src="./img/logo.png" alt="SwissFish.zoo Logo" width="25px" height="auto">
@@ -89,7 +94,8 @@
       <p>|</p>
       <p><a href="#">Datenschutz</a></p>
     </div>
-  
+
   </footer>
 </body>
+
 </html>
