Edited header in all site

--- a/Egli.html
+++ b/Egli.html
@@ -11,20 +11,17 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="logo">
-        <p>SwissFish.zoo</p>
-      </div>
-
-      <ul class="nav-links">
+  <header class="header">
+    <div class="website-name">SwissFish.zoo</div>
+    <nav class="navigation">
+      <ul>
         <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Home.html">Home</a></li>
         <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
         <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
         <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
       </ul>
-
     </nav>
+    
   </header>
   <main>
 
@@ -64,7 +61,7 @@
           <h2>Anatomie</h2>
           <img src="./img/titel-img.png" width="230px" height="auto">
         </div>
-        <h4>-Körperbau: Hochrückigen Körper</h4>
+        <h4>-Körperform: Hochrückigen Körper</h4>
         <h4>-Laichzeit: März bis Juni</h4>
       </div>
 
