--- a/Fischarten.html
+++ b/Fischarten.html
@@ -17,21 +17,18 @@
 
 <body>
  
-  <header>
-    <nav class="navbar">
-      <div class="logo">
-        <p>SwissFish.zoo</p>
-      </div>
-
-      <ul class="nav-links">
+  <header class="header">
+    <div class="website-name">SwissFish.zoo</div>
+    <nav class="navigation">
+      <ul>
         <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Home.html">Home</a></li>
         <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
         <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
         <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
       </ul>
-
     </nav>
-    </header>
+    
+  </header>
 
 
 <main>
