--- a/Home.html
+++ b/Home.html
@@ -12,22 +12,19 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="logo">
-        <p>SwissFish.zoo</p>
-      </div>
-
-      <ul class="nav-links">
+  <header class="header">
+    <div class="website-name">SwissFish.zoo</div>
+    <nav class="navigation">
+      <ul>
         <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Home.html">Home</a></li>
         <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
         <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
         <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
       </ul>
-
     </nav>
+    
   </header>
-  <div><img src="./img/page-down.png" alt="Page down arrow" width="40px" height="40px"></div>
+
   <main>
 
     <div class="main-section">
@@ -41,7 +38,7 @@
           <p>wo man von Eglis bis zum Stör eine Vielfalt dieser Kreaturen bewundern kann.</p>
           <p>Erlebe mit uns faszinierende Grillfeste, abenteuerliche Attraktionen und die einzigartige Möglichkeit, die
             Fische zu füttern.</p>
-          <p>Besuche uns und entdecke die Schönheit unserer Raubfische!</p>
+          <p>Besuche uns und entdecke die Schönheit unserer Raubfische!</p><br>
           <p>SwissFish.zoo Team</p>
         </div>
       </div>
@@ -61,31 +58,23 @@
               <th>Öffnungszeit</th>
             </tr>
             <tr>
-              <td>Montag</td>
-              <td>9:00 - 18:00 Uhr</td>
+              <td>Mo-Mit</td>
+              <td>08:00 - 16:30 Uhr</td>
             </tr>
             <tr>
-              <td>Dienstag</td>
-              <td>9:00 - 18:00 Uhr</td>
-            </tr>
-            <tr>
-              <td>Mittwoch</td>
-              <td>9:00 - 18:00 Uhr</td>
-            </tr>
-            <tr>
-              <td>Donnerstag</td>
-              <td>9:00 - 18:00 Uhr</td>
-            </tr>
-            <tr>
-              <td>Freitag</td>
-              <td>9:00 - 18:00 Uhr</td>
+              <td>Do-Fr</td>
+              <td>08:30 - 17:15 Uhr</td>
             </tr>
             <tr>
               <td>Samstag</td>
-              <td>10:00 - 15:00 Uhr</td>
+              <td>09:30 - 17:15 Uhr</td>
             </tr>
             <tr>
-              <td>Sonntag</td>
+              <td>Sonnatg</td>
+              <td>09:30 - 17:30 Uhr</td>
+            </tr>
+            <tr>
+              <td>Feierstage</td>
               <td>Geschlossen</td>
             </tr>
           </table>
@@ -103,31 +92,23 @@
               <th>Öffnungszeit</th>
             </tr>
             <tr>
-              <td>Montag</td>
-              <td>9:00 - 18:00 Uhr</td>
+              <td>Mo-Di</td>
+              <td>07:30 - 16:30 Uhr</td>
             </tr>
             <tr>
-              <td>Dienstag</td>
-              <td>9:00 - 18:00 Uhr</td>
-            </tr>
-            <tr>
-              <td>Mittwoch</td>
-              <td>9:00 - 18:00 Uhr</td>
-            </tr>
-            <tr>
-              <td>Donnerstag</td>
-              <td>9:00 - 18:00 Uhr</td>
-            </tr>
-            <tr>
-              <td>Freitag</td>
-              <td>9:00 - 18:00 Uhr</td>
+              <td>Do-Fr</td>
+              <td>08:15 - 17:15 Uhr</td>
             </tr>
             <tr>
               <td>Samstag</td>
-              <td>10:00 - 15:00 Uhr</td>
+              <td>09:15 - 18:15 Uhr</td>
             </tr>
             <tr>
-              <td>Sonntag</td>
+              <td>Sonnatg</td>
+              <td>09:30 - 18:30 Uhr</td>
+            </tr>
+            <tr>
+              <td>Feierstage</td>
               <td>Geschlossen</td>
             </tr>
           </table>
