--- a/Forelle.html
+++ b/Forelle.html
@@ -86,9 +86,9 @@
       <img src="./img/logo.png" alt="SwissFish.zoo Logo" width="25px" height="auto">
     </div>
     <div class="footer-impdat">
-      <p><a href="#">Impressum</a></p>
+      <p><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Impressum.html">Impressum</a></p>
       <p>|</p>
-      <p><a href="#">Datenschutz</a></p>
+      <p><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Datenschutz.html">Datenschutz</a></p>
     </div>
 
   </footer>
