Target _blank to all impressum and Datenschutz pages

--- a/Attraktionen.html
+++ b/Attraktionen.html
@@ -72,9 +72,9 @@
       <img src="./img/logo.png" alt="SwissFish.zoo Logo" width="25px" height="auto">
     </div>
     <div class="footer-impdat">
-      <p><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Impressum.html">Impressum</a></p>
+      <p><a target="_blank" href="file:///C:/Users/bruno/Desktop/Website-Zoo/Impressum.html">Impressum</a></p>
       <p>|</p>
-      <p><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Datenschutz.html">Datenschutz</a></p>
+      <p><a target="_blank" href="file:///C:/Users/bruno/Desktop/Website-Zoo/Datenschutz.html">Datenschutz</a></p>
     </div>
   </footer>
 
