changed path to relativ-path

--- a/Hecht.html
+++ b/Hecht.html
@@ -15,16 +15,16 @@
     <div class="website-name">SwissFish.zoo</div>
     <nav class="navigation">
       <ul>
-        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/index.html">Home</a></li>
-        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
-        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
-        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
+        <li><a href="Home.html">Home</a></li>
+        <li><a href="Fischarten.html">Fischarten</a></li>
+        <li><a href="Tickets.html">Tickets</a></li>
+        <li><a href="Attraktionen.html">Attraktionen</a></li>
       </ul>
     </nav>
     
   </header>
   <main>
-
+    <div class="fischBio-container">
     <aside class="fishprogress-img">
       <img src="./img/fisch-img.png" alt="Bild mit progress-Pünkte" width="auto" height="670px">
     </aside>
@@ -66,6 +66,7 @@
       </div>
 
     </aside>
+    </div>
 
     <aside class="über-fisch-container">
       <!--Über Fisch-->
