--- a/Home.html
+++ b/Home.html
@@ -16,10 +16,10 @@
     <div class="website-name">SwissFish.zoo</div>
     <nav class="navigation">
       <ul>
-        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Home.html">Home</a></li>
-        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
-        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
-        <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
+        <li><a href="Home.html">Home</a></li>
+        <li><a href="Fischarten.html">Fischarten</a></li>
+        <li><a href="Tickets.html">Tickets</a></li>
+        <li><a href="Attraktionen.html">Attraktionen</a></li>
       </ul>
     </nav>
     
