--- a/Tickets.html
+++ b/Tickets.html
@@ -14,12 +14,12 @@
     <header class="header">
         <div class="website-name">SwissFish.zoo</div>
         <nav class="navigation">
-          <ul>
-            <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/index.html">Home</a></li>
-            <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Fischarten.html">Fischarten</a></li>
-            <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Tickets.html">Tickets</a></li>
-            <li><a href="file:///C:/Users/bruno/Desktop/Website-Zoo/Attraktionen.html">Attraktionen</a></li>
-          </ul>
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="Fischarten.html">Fischarten</a></li>
+                <li><a href="Tickets.html">Tickets</a></li>
+                <li><a href="Attraktionen.html">Attraktionen</a></li>
+              </ul>
         </nav>
         
       </header>
