--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="website-name">SwissFish.zoo</div>
     <nav class="navigation">
       <ul>
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Fischarten.html">Fischarten</a></li>
         <li><a href="Tickets.html">Tickets</a></li>
         <li><a href="Attraktionen.html">Attraktionen</a></li>
