--- a/Forellenbarsch.html
+++ b/Forellenbarsch.html
@@ -83,7 +83,7 @@
 
   <footer>
     <div class="footer-logo">
-      <h2>SwissFisch.zoo</h2>
+      <h2>SwissFish.zoo</h2>
       <img src="./img/logo.png" alt="SwissFish.zoo Logo" width="25px" height="auto">
     </div>
     <div class="footer-impdat">
