Added a alt tag to every img

--- a/Aal.html
+++ b/Aal.html
@@ -26,7 +26,7 @@
   <main>
     <div class="fischBio-container">
     <aside class="fishprogress-img">
-      <img src="./img/fisch-img.png" alt="Bild mit progress-Pünkte" width="auto" height="670px">
+      <img alt="decoration progress-icon" src="./img/fisch-img.png" alt="Bild mit progress-Pünkte" width="auto" height="670px">
     </aside>
 
     <aside class="fischinfo-container">
@@ -34,7 +34,7 @@
       <div class="thema-container">
         <div class="info-thema">
           <h2>Lebensraum</h2>
-          <img src="./img/titel-img.png" width="230px" height="auto">
+          <img alt="Decoration-underline" src="./img/titel-img.png" width="230px" height="auto">
         </div>
 
         <h4>-Aquatische Umgebung: Klares Wasser</h4>
@@ -47,7 +47,7 @@
       <div class="thema-container">
         <div class="info-thema">
           <h2>Artenvielfalt und Ökologie</h2>
-          <img src="./img/titel-img.png" width="250px" height="auto">
+          <img alt="Decoration-underline" src="./img/titel-img.png" width="250px" height="auto">
         </div>
         <h4>-Grösse: Bis 150cm</h4>
         <h4>-Gewicht: Bis 3.5Kg</h4>
@@ -59,7 +59,7 @@
       <div class="thema-container">
         <div class="info-thema">
           <h2>Anatomie</h2>
-          <img src="./img/titel-img.png" width="230px" height="auto">
+          <img alt="Decoration-underline" src="./img/titel-img.png" width="230px" height="auto">
         </div>
         <h4>-Körperform: Schlangenförmig</h4>
         <h4>-Laichzeit: Sept. - Okt.</h4>
@@ -70,7 +70,7 @@
     <aside class="über-fisch-container">
       <!--Über Fisch-->
       <div class="card">
-        <img src="./img/aal.jpg" alt="Bildbeschreibung">
+        <img alt="Aal Bild" src="./img/aal.jpg">
         <div class="card-text">
           <p>Der Aal ist ein Süßwasserfisch und gehört zur Familie der Aale. Er hat einen langen, schlängelnden Körper
             und ist braun oder schwarz gefärbt. Aale leben in Flüssen und Seen und ernähren sich von kleinen Fischen und
@@ -83,7 +83,7 @@
   <footer>
     <div class="footer-logo">
       <h2>SwissFish.zoo</h2>
-      <img src="./img/logo.png" alt="SwissFish.zoo Logo" width="25px" height="auto">
+      <img alt="Logo Icon" src="./img/logo.png"  width="25px" height="auto">
     </div>
     <div class="footer-impdat">
       <p><a target="_blank" href="Impressum.html">Impressum</a></p>
