--- a/Hecht.html
+++ b/Hecht.html
@@ -27,7 +27,7 @@
   <main>
     <div class="fischBio-container">
     <aside class="fishprogress-img">
-      <img src="./img/fisch-img.png" alt="Bild mit progress-Pünkte" width="auto" height="670px">
+      <img alt="decoration progress-icon" src="./img/fisch-img.png" alt="Bild mit progress-Pünkte" width="auto" height="670px">
     </aside>
 
     <aside class="fischinfo-container">
@@ -35,7 +35,7 @@
       <div class="thema-container">
         <div class="info-thema">
           <h2>Lebensraum</h2>
-          <img src="./img/titel-img.png" width="230px" height="auto">
+          <img alt="Decoration-underline" src="./img/titel-img.png" width="230px" height="auto">
         </div>
 
         <h4>-Aquatische Umgebung: Klares Wasser</h4>
@@ -48,7 +48,7 @@
       <div class="thema-container">
         <div class="info-thema">
           <h2>Artenvielfalt und Ökologie</h2>
-          <img src="./img/titel-img.png" width="250px" height="auto">
+          <img alt="Decoration-underline" src="./img/titel-img.png" width="250px" height="auto">
         </div>
         <h4>-Grösse: Bis 150cm</h4>
         <h4>-Gewicht: Bis 15Kg</h4>
@@ -60,7 +60,7 @@
       <div class="thema-container">
         <div class="info-thema">
           <h2>Anatomie</h2>
-          <img src="./img/titel-img.png" width="230px" height="auto">
+          <img alt="Decoration-underline" src="./img/titel-img.png" width="230px" height="auto">
         </div>
         <h4>-Körperform: Pfeilförmig</h4>
         <h4>-Laichzeit: März - Mai</h4>
@@ -72,7 +72,7 @@
     <aside class="über-fisch-container">
       <!--Über Fisch-->
       <div class="card">
-        <img src="./img/hecht-attraktion.jpg" alt="Bildbeschreibung">
+        <img alt="Hecht Bild" src="./img/hecht-attraktion.jpg" >
         <div class="card-text">
           <p> Der Hecht ist ein großer Süßwasserfisch und gehört zur Familie der Hechte. Er hat einen langen, schlanken
             Körper und ist grünlich bis graubraun gefärbt. Hechte sind Raubfische und ernähren sich vor allem von
@@ -86,7 +86,7 @@
   <footer>
     <div class="footer-logo">
       <h2>SwissFish.zoo</h2>
-      <img src="./img/logo.png" alt="SwissFish.zoo Logo" width="25px" height="auto">
+      <img alt="Logo Icon" src="./img/logo.png" width="25px" height="auto">
     </div>
     <div class="footer-impdat">
       <p><a target="_blank" href="Impressum.html">Impressum</a></p>
