--- a/Tickets.html
+++ b/Tickets.html
@@ -93,7 +93,7 @@
 
             <div class="right-container">
                 <div class="card">
-                    <img src="./img/gift-img.jpg" alt="Bildbeschreibung" height="320px" width="auto">
+                    <img alt="Geschenkkarte Bild" src="./img/gift-img.jpg"  height="320px" width="auto">
                     <div class="card-text">
                         <p>Im Zoo gibt es die Möglichkeit, Gutscheinkarten zu kaufen und zu verschenken. <br>Die Karten
                             können für verschiedene Zwecke verwendet werden, z.B. um den Eintrittspreis zu bezahlen oder
@@ -107,7 +107,7 @@
     <footer>
         <div class="footer-logo">
           <h2>SwissFish.zoo</h2>
-          <img src="./img/logo.png" alt="SwissFish.zoo Logo" width="25px" height="auto">
+          <img alt="Logo Icon" src="./img/logo.png"  width="25px" height="auto">
         </div>
         <div class="footer-impdat">
             <p><a target="_blank" href="Impressum.html">Impressum</a></p>
