--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="main-section">
 
       <div class="left-container">
-        <img src="./img/aboutus.jpg" width="350px" height="auto">
+        <img alt="Homefisch Bild" src="./img/aboutus.jpg" width="350px" height="auto">
         <div class="überuns-text">
           <!--Über uns-->
           <h2>Über uns</h2>
@@ -44,7 +44,7 @@
       </div>
 
       <aside class="öffnungszeit-container">
-        <div class="uhrzeit-header"><img src="./img/time-icon.png" width="25px" height="25px">
+        <div class="uhrzeit-header"><img alt="Uhr Icon" src="./img/time-icon.png" width="25px" height="25px">
           <h2>Öffnungszeiten</h2>
         </div>
 
@@ -141,7 +141,7 @@
   <footer>
     <div class="footer-logo">
       <h2>SwissFish.zoo</h2>
-      <img src="./img/logo.png" alt="SwissFish.zoo Logo" width="25px" height="auto">
+      <img alt="Logo Icon" src="./img/logo.png"  width="25px" height="auto">
     </div>
     <div class="footer-impdat">
       <p><a target="_blank" href="Impressum.html">Impressum</a></p>
