--- a/Forellenbarsch.html
+++ b/Forellenbarsch.html
@@ -26,7 +26,7 @@
   <main>
     <div class="fischBio-container">
     <aside class="fishprogress-img">
-      <img src="./img/fisch-img.png" alt="Bild mit progress-Pünkte" width="auto" height="670px">
+      <img alt="decoration progress-icon" src="./img/fisch-img.png" alt="Bild mit progress-Pünkte" width="auto" height="670px">
     </aside>
 
     <aside class="fischinfo-container">
@@ -34,7 +34,7 @@
       <div class="thema-container">
         <div class="info-thema">
           <h2>Lebensraum</h2>
-          <img src="./img/titel-img.png" width="230px" height="auto">
+          <img alt="Decoration-underline" src="./img/titel-img.png" width="230px" height="auto">
         </div>
 
         <h4>-Aquatische Umgebung: Brackwasser</h4>
@@ -47,7 +47,7 @@
       <div class="thema-container">
         <div class="info-thema">
           <h2>Artenvielfalt und Ökologie</h2>
-          <img src="./img/titel-img.png" width="250px" height="auto">
+          <img alt="Decoration-underline" src="./img/titel-img.png" width="250px" height="auto">
         </div>
         <h4>-Grösse: Bis 80cm</h4>
         <h4>-Gewicht: Bis 6Kg </h4>
@@ -59,7 +59,7 @@
       <div class="thema-container">
         <div class="info-thema">
           <h2>Anatomie</h2>
-          <img src="./img/titel-img.png" width="230px" height="auto">
+          <img alt="Decoration-underline" src="./img/titel-img.png" width="230px" height="auto">
         </div>
         <h4>-Körperform: Lang gestreckt</h4>
         <h4>-Laichzeit: April - Juni</h4>
@@ -70,7 +70,7 @@
     <aside class="über-fisch-container">
       <!--Über Fisch-->
       <div class="card">
-        <img src="./img/forellenbarsch.jpg" alt="Bildbeschreibung">
+        <img alt="Forellenbarsch Bild"  src="./img/forellenbarsch.jpg">
         <div class="card-text">
           <p> Der Forellenbarsch ist ebenfalls ein Süßwasserfisch und gehört zur Familie der Sonnenbarsche. Er hat eine
             silbrige bis grüne Farbe und ist an den Flanken mit dunklen Flecken versehen. Der Forellenbarsch ernährt
@@ -84,7 +84,7 @@
   <footer>
     <div class="footer-logo">
       <h2>SwissFish.zoo</h2>
-      <img src="./img/logo.png" alt="SwissFish.zoo Logo" width="25px" height="auto">
+      <img alt="Logo Icon" src="./img/logo.png"  width="25px" height="auto">
     </div>
     <div class="footer-impdat">
       <p><a target="_blank" href="Impressum.html">Impressum</a></p>
