insert location map of the zoo to home page

--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -23,12 +23,12 @@
       ausschließlich zu Ausbildungszwecken erstellt und hat keinen kommerziellen oder sonstigen Zweck. </p>
 
     <h3>1. Verantwortlicher für die Datenverarbeitung</h3>
-    <p>Name des Unternehmens: SwissFish-zoo</p>
+    <p>Name des Unternehmens: SwissFish.zoo</p>
     <p>Straße und Hausnummer: Zooerstrasse 23</p>
     <p>Ort: Zürich </p>
     <p>Land: Schweiz</p>
     <p>Telefonnummer: 079 065 54 45</p>
-    <p>E-Mail-Adresse: swissfish-zoo@gmail.com</p>
+    <p>E-Mail-Adresse: swissfish.zoo@gmail.com</p>
 
 
     <h3>2. Datenverarbeitung</h3>
