--- a/Impressum.html
+++ b/Impressum.html
@@ -13,12 +13,12 @@
 </header>
 <main>
   <section>
-    <p>Name des Unternehmens: SwissFish-zoo</p>
+    <p>Name des Unternehmens: SwissFish.zoo</p>
     <p>Straße und Hausnummer: Zooerstrasse 23</p>
     <p>Ort: Zürich </p>
     <p>Land: Schweiz</p>
     <p>Telefonnummer: 079 065 54 45</p>
-    <p>E-Mail-Adresse: swissfish-zoo@gmail.com</p>
+    <p>E-Mail-Adresse: swissfish.zoo@gmail.com</p>
   </section>
 </main>
 </main>
