--- a/Tickets.html
+++ b/Tickets.html
@@ -42,12 +42,12 @@
                         <td>22.90 Fr.</td>
                     </tr>
                     <tr>
-                        <td>Kinder bis 16 Jahr.</td>
+                        <td>Jugend. bis 16 Jahr.</td>
                         <td>14.90 Fr.</td>
                     </tr>
                     <tr>
-                        <td>Kleinkinder unter 10</td>
-                        <td>Gratis Eintritt</td>
+                        <td>Kinder unter 10</td>
+                        <td>Gratis </td>
                     </tr>
                     <tr>
                         <td>Klassenticket: Schüler bis 16 Jahr.</td>
@@ -68,23 +68,23 @@
                         </tr>
                     </thead>
                     <tr>
-                        <td>Filmabend mit Buffet: ab 16 Jahr.</td>
+                        <td>Filmabend mit Buffet: ab 16 J.</td>
                         <td>24.90 Fr.</td>
                     </tr>
                     <tr>
-                        <td>Filmabend mit Buffet: unter 16 Jahr.</td>
+                        <td>Filmabend mit Buffet: unter 16 J.</td>
                         <td>16 Fr.</td>
                     </tr>
                     <tr>
                         <td>Familienticket max 5 Pers.</td>
-                        <td>26.90</td>
+                        <td>26.90Fr.</td>
                     </tr>
                     <tr>
-                        <td>Tagesticket, alles inbegr.: ab 16 Jahr.</td>
+                        <td>Alles inbegrif.: ab 16 Jahr.</td>
                         <td>24 Fr.</td>
                     </tr>
                     <tr>
-                        <td>Tagesticket, alles inbegrif.: ab 16 Jahr.</td>
+                        <td>Alles inbegrif.: ab 16 Jahr.</td>
                         <td>18.90 Fr.</td>
                     </tr>
 
@@ -93,7 +93,7 @@
 
             <div class="right-container">
                 <div class="card">
-                    <img alt="Geschenkkarte Bild" src="./img/gift-img.jpg"  height="320px" width="auto">
+                    <img alt="Geschenkkarte Bild" src="./img/gift-img.jpg"  >
                     <div class="card-text">
                         <p>Im Zoo gibt es die Möglichkeit, Gutscheinkarten zu kaufen und zu verschenken. <br>Die Karten
                             können für verschiedene Zwecke verwendet werden, z.B. um den Eintrittspreis zu bezahlen oder
