--- a/index.html
+++ b/index.html
@@ -135,6 +135,16 @@
       </div>
       </section>
 
+      <hr>
+
+      <aside class="zooMap">
+        <div class="image-container">
+          <img src="./img/zooKarte.jpg" alt="Mappe des Zoo" width="350px" height="auto">
+          <div class="text"><b>Adresse:</b> Zooerstrasse 23, Zürich</div>
+        </div>
+      </aside>
+
+
 
   </main>
 
