changed background img for fish-page

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <!--Über uns-->
           <h2>Über uns</h2>
           <p>Unsere Schweizer Familie hat eine Passion für Raubfische und erschuf einen atemberaubenden Zoo,</p>
-          <p>wo man von Eglis bis zum Stör eine Vielfalt dieser Kreaturen bewundern kann.</p>
-          <p>Erlebe mit uns faszinierende Grillfeste, abenteuerliche Attraktionen und die einzigartige Möglichkeit, die
+          <p>wo man von Eglis bis zum Stör eine Vielfalt dieser <a href="Fischarten.html">Fische</a> bewundern kann.</p>
+          <p>Erlebe mit uns faszinierende Grillfeste, abenteuerliche <a href="Attraktionen.html">Attraktionen</a> und die einzigartige Möglichkeit, die
             Fische zu füttern.</p>
           <p>Besuche uns und entdecke die Schönheit unserer Raubfische!</p><br>
           <p>SwissFish.zoo Team</p>
